# AffinityPluginLoader

./: .gitignore  AffinityPluginLoader.sln  README.md  build.bat  build.sh  deploy.sh  docker-build.sh  mkdocs.yml  package-release.ps1  package-release.sh
.github/: FUNDING.yml
.github/workflows/: build.yml  docs.yml  pr-comment-complete.yml  pr-comment.yml
AffinityBootstrap/: bootstrap.c  build.bat  build.sh
AffinityHook/: AffinityHook.csproj  Program.cs
AffinityPluginLoader/: AffinityPlugin.cs  AffinityPluginLoader.csproj  EntryPoint.cs  IPluginContext.cs  LoadStage.cs  PluginContext.cs
AffinityPluginLoader/Core/: AplSettings.cs  Logger.cs  PluginManager.cs
AffinityPluginLoader/Native/: ComHook.cs  NativeHook.cs  NativePatch.cs
AffinityPluginLoader/Patches/: LifecyclePatches.cs  LoaderPatches.cs  PreferencesPatches.cs
AffinityPluginLoader/Properties/: AssemblyInfo.cs
AffinityPluginLoader/Settings/: PluginSettingsDefinition.cs  SettingsElements.cs  SettingsStore.cs
AffinityPluginLoader/UI/: PluginPreferencesPageFactory.cs  PluginsPreferencesPage.cs  PluginsPreferencesPage.xaml  SerifControlHelper.cs
WineFix/: README.md  WineFix.csproj  WineFixPlugin.cs
WineFix/Patches/: BezierRenderingPatch.cs  BezierSplitBudgetPatch.cs  BezierSplitGuardPatch.cs  CanvaSignInPatch.cs  CollinearJoinPatch.cs  ColorPickerWaylandPatch.cs  CommandLineFileOpenPatch.cs  FontEnumerationPatch.cs  MainWindowLoadedPatch.cs  WidenStubPatch.cs
WineFix/Properties/: AssemblyInfo.cs
WineFix/lib/d2d1/: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  VERSION  build-all.sh  build-cmake.sh
WineFix/lib/d2d1/include/windows/: d2d1.idl  dcommon.idl
WineFix/lib/d2d1/include/wine/: debug.h  heap.h
WineFix/lib/d2d1/src/: d2d1_private.h  factory.c  geometry.c  guids.c  stubs.c  version.rc
docker/: Dockerfile
docs/: CNAME  index.md
docs/apl/: getting-started.md  writing-plugins.md
docs/dev/: creating-a-plugin.md  native-apis.md
docs/guide/: configuration.md  installation.md
docs/winefix/: configuration.md  index.md  installation.md
